--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "azure-openai-cli"
 version = "0.1.0"
 edition = "2021"
+description = "A modular, extensible CLI tool for interacting with Azure OpenAI and other LLM providers. Supports streaming output, provider plugins, and easy configuration."
+license = "MIT OR Apache-2.0"
+authors = ["Dom"]
+repository = "https://github.com/dominic-codespoti/azure-openai-cli"
+homepage = "https://github.com/dominic-codespoti/azure-openai-cli"
+documentation = "https://docs.rs/azure-openai-cli"
+keywords = ["azure", "openai", "cli", "llm", "ai"]
+categories = ["command-line-utilities", "api-bindings", "ai"]
+readme = "README.md"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }
